--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="app">
-      <ol>
-        <li v-for="todo in todos">
-          {{ todo.text }}
-        </li>
-      </ol>
+      <p>{{ message }}</p>
+      <button v-on:click="reverseMessage">Reverse Message</button>
     </div>
 
     <script type="text/javascript">
       var app =  new Vue({
         el: '#app',
         data: {
-          todos: [
-            { text: 'Learn Javascript' },
-            { text: 'Learn Vue' },
-            { text: 'Build something awesome' },
-            { text: "Add on console: app.todos.push({ text: 'New item' })" }
-          ]
+          message: "Hello Vue.js!"
+        },
+        methods: {
+          reverseMessage: function () {
+            this.message = this.message.split('').reverse().join('')
+          }
         }
       });
     </script>
