--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div id="app">
       <p>{{ message }}</p>
-      <button v-on:click="reverseMessage">Reverse Message</button>
+      <input v-model="message">
     </div>
 
     <script type="text/javascript">
@@ -17,11 +17,6 @@
         el: '#app',
         data: {
           message: "Hello Vue.js!"
-        },
-        methods: {
-          reverseMessage: function () {
-            this.message = this.message.split('').reverse().join('')
-          }
         }
       });
     </script>
