Introduction - Composing with Components(todo-item prop v-bind directive #app7

--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="app">
-      <p>{{ message }}</p>
-      <input v-model="message">
+      <ol>
+        <todo-item
+          v-for="item in groceryList"
+          v-bind:todo="item"
+          v-bind:key="item.id">
+        </todo-item>
+      </ol>
     </div>
 
     <script type="text/javascript">
+      Vue.component('todo-item', {
+        props: ['todo'],
+        template: '<li>{{ todo.text }}</li>'
+      })
+
       var app =  new Vue({
         el: '#app',
         data: {
-          message: "Hello Vue.js!"
+          groceryList: [
+            { id: 0, text: 'Vegetables' },
+            { id: 1, text: 'Cheese' },
+            { id: 2, text: 'Whatever else humans are supposed to eat' }
+          ]
         }
       });
     </script>
