Introduction - Composing with Components (imaginary example)

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="app">
-      <ol>
-        <todo-item
-          v-for="item in groceryList"
-          v-bind:todo="item"
-          v-bind:key="item.id">
-        </todo-item>
-      </ol>
+      <app-nav></app-nav>
+      <app-view>
+        <app-sidebar></app-sidebar>
+        <app-content></app-content>
+      </app-view>
     </div>
 
     <script type="text/javascript">
