--- a/index.html
+++ b/index.html
@@ -8,58 +8,24 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="app">
-     <p>
-       Faça uma pergunta do tipo sim/não:
-       <input v-model="question">
-     </p>
-     <p>{{ answer }}</p>
+      <div v-bind:class="classObject"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
+
     <script type="text/javascript">
       var app =  new Vue({
         el: '#app',
         data: {
-          question: '',
-          answer: 'Eu não posso responder até que você faça uma pergunta!'
+          isActive: true,
+          error: null
         },
-        watch: {
-          //sempre que a pergunta mudar, essa função será executada
-          question: function (newQuestion, oldQuestion) {
-            this.answer = 'Esperando você parar de escrever...'
-            this.getAnswer()
-          }
-        },
-        methods: {
-          // _.debounce é uma função fornecida pelo lodash para limitar
-          // a frequência que uma operação complexa pode ser executada.
-          // Neste caso, queremos limitar a frequência com que acessamos
-          // a yesno.wtf/api, esperando que o usuário termine completamente
-          // a digitação antes de realizar a chamada Ajax. Para aprender
-          // mais sobre a função _.debounce (e sua prima _.throttle),
-          // visite: https://lodash.com/docs#debounce
-          getAnswer: _.debounce(
-            function() {
-              var vm = this
-              if (vm.question.indexOf('?') === -1){
-                vm.answer = 'Perguntas geralmente têm uma interrogação. ;-)'
-                return
+        computed: {
+            classObject: function () {
+              return {
+                active: this.isActive && !this.error,
+                'text-danger': this.error && this.error.type === 'fatal'
               }
-              vm.answer = 'Pensando...'
-              axios.get('https://yesno.wtf/api')
-                .then(function (response) {
-                  vm.answer = response.data.answer === 'yes' ? 'Sim.' :
-                              response.data.answer === 'no' ? 'Não.' : 'Talvez!'
-                })
-                .catch(function(error) {
-                  vm.answer = 'Erro! Não pode exectutar a API. ' + error
-                })
-            },
-            // Este é o número de milissegundos que aguardamos para
-            // que o usuário pare de digitar
-            500
-          )
+            }
         }
       });
     </script>
