Interligando Classes HTML - Sintaxe do Objeto - classObject

--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
       var app =  new Vue({
         el: '#app',
         data: {
-          isActive: true,
-          error: null
-        },
-        computed: {
-            classObject: function () {
-              return {
-                active: this.isActive && !this.error,
-                'text-danger': this.error && this.error.type === 'fatal'
-              }
-            }
+          classObject: {
+            active: true,
+            'text-danger': false
+          }
         }
       });
     </script>
