--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="app">
-      <div v-bind:class="[isActive ? activeClass : '', errorClass]"></div>
+      <div v-bind:class="[{ active: isActive }, errorClass]"></div>
     </div>
 
 
@@ -16,7 +16,7 @@
       var app =  new Vue({
         el: '#app',
         data: {
-          isActive: true,
+          isActive: false,
           activeClass: 'active',
           errorClass: 'text-danger'
         }
