--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="app">
-      <div v-bind:style="styleObject"></div>
+      <div v-bind:style="[baseStyles, overridingStyles]"></div>
     </div>
 
 
@@ -17,9 +17,12 @@
       var app =  new Vue({
         el: '#app',
         data: {
-          styleObject: {
+          baseStyles: {
             activeColor: 'red',
             fontSize: '13px'
+          },
+          overridingStyles: {
+            
           }
         }
       });
