--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="app">
-      <div v-if="type === 'A'">
-        A
-      </div>
-      <div v-else-if="type === 'B'">
-        B
-      </div>
-      <div v-else-if="type === 'C'">
-        C
-      </div>
-      <div v-else>
-        Não é A, B ou C
-      </div>
+      <template v-if="loginType === 'username'">
+        <label>Usuário</label>
+        <input placeholder="Informe o nome de usuário" key="username-input">
+      </template>
+      <template v-else>
+        <label>E-mail</label>
+        <input placeholder="Informe o endereço de e-mail" key="email-input">
+      </template>
     </div>
 
 
@@ -28,7 +24,7 @@
       var app =  new Vue({
         el: '#app',
         data: {
-          type: 'Z'
+
         }
       });
 
