--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <body>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
-    <ul id="example-1">
-        <li v-for="item in items">
-          {{ item.message }}
+    <ul id="example">
+        <li v-for="(item, index) in items">
+          {{ parentMessage }} - {{ index }} - {{ item.message }}
         </li>
     </ul>
 
     <script type="text/javascript">
 
-      var example1 =  new Vue({
-        el: '#example-1',
+      var example =  new Vue({
+        el: '#example',
         data: {
+          parentMessage: 'Pai',
           items: [
             { message: 'Algo' },
             { message: 'Outro' }
