--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <ul id="example">
-        <li v-for="(item, index) in items">
+        <li v-for="(item, index) of items">
           {{ parentMessage }} - {{ index }} - {{ item.message }}
         </li>
     </ul>
