--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <ul id="v-for-object" class="demo">
-        <li v-for="(value, key) in object">
-          {{ key }}: {{ value }}
+        <li v-for="(value, key, index) in object">
+          {{ index }}. {{ key }}: {{ value }}
         </li>
     </ul>
 
