--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <ul id="example">
-      <li v-for="(item, index) in items" :key="item.id">
-        {{ parentMessage }} - {{ index }} - {{ item.message }}
+      <li v-for="n in evenNumbers">
+        {{ n }}
       </li>
     </ul>
 
@@ -18,12 +18,15 @@
       var example =  new Vue({
          el: '#example',
          data: {
-          parentMessage: 'Pai',
-          items: [
-            { message: 'Algo' },
-            { message: 'Outro' }
-          ]
-        }
+          numbers: [1, 2, 3, 4, 5 ]
+         },
+         computed: {
+           evenNumbers: function () {
+             return this.numbers.filter(function (number){
+               return number % 2 === 0
+             })
+           }
+         }
       });
 
     </script>
