Mostrando Resultados Filtrados/Ordenados - Intervalo Numérico no v-for

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   <body>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
-    <ul id="example">
-      <li v-for="n in even(numbers)">
-        {{ n }}
-      </li>
-    </ul>
+    <div id="example">
+      <span v-for="n in 10">{{ n }}</span>
+    </div>
 
     <script type="text/javascript">
 
