--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
     <div id="example">
       <ul>
-        <template v-for="item in items">
-          <li>{{ item.msg }}</li>
-          <li class="divider"></li>
-        </template>
+        <li v-for="todo in todos" v-if="!todo.isComplete">
+          {{ todo }}
+        </li>
       </ul>
     </div>
 
