Redenrização de Listas - Componentes com v-for

--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="example">
-      <ul v-if="todos.length">
-        <li v-for="todo in todos">
-          {{ todo }}
-        </li>
-      </ul>
-      <p v-else>Não há tarefas a fazer!</p>
+      <my-component v-for="item in items" :key="item.id"></my-component>
     </div>
 
     <script type="text/javascript">
@@ -21,7 +16,7 @@
       var example =  new Vue({
          el: '#example',
          data: {
-           todos: []
+           
          }
       });
 
