--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="example">
-      <my-component v-for="item in items" :key="item.id"></my-component>
+      <my-component
+        v-for="(item, index) in items"
+        v-bind:item="item"
+        v-bind:index="index"
+        v-bind:key="item.id"
+      ></my-component>
     </div>
 
     <script type="text/javascript">
@@ -16,7 +21,7 @@
       var example =  new Vue({
          el: '#example',
          data: {
-           
+
          }
       });
 
