--- a/index.html
+++ b/index.html
@@ -26,10 +26,43 @@
 
     <script type="text/javascript">
 
-      var example =  new Vue({
-         el: '#example',
+      Vue.component('todo-item', {
+        template: '\
+          <li>\
+            {{ title }}\
+            <button v-on:click="$emit(\'remove\')">X</button>\
+            </li>\
+          ',
+          props: ['title']
+      })
+      new Vue({
+         el: '#todo-list-example',
          data: {
-
+           newTodoText: '',
+           todos: [
+             {
+               id: 1,
+               title: 'Lavar os pratos',
+             },
+             {
+               id: 2,
+               title: 'Tirar o lixo',
+             },
+             {
+               id: 3,
+               title: 'Cortar a grama'
+             }
+           ],
+           nextTodoId: 4
+         },
+         methods: {
+           addNewTodo: function () {
+             this.todos.push({
+               id: this.nextTodoId++,
+               title: this.newTodoText
+             })
+             this.newTodoText = ''
+           }
          }
       });
 
