--- a/index.html
+++ b/index.html
@@ -7,64 +7,19 @@
   <body>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
-    <div id="todo-list-example">
-      <input
-        v-model="newTodoText"
-        v-on:keyup.enter="addNewTodo"
-        placeholder="Adicionar uma tarefa"
-      >
-      <ul>
-        <li
-          is="todo-item"
-          v-for="(todo, index) in todos"
-          v-bind:key="todo.id"
-          v-bind:title="todo.title"
-          v-on:remove="todos.splice(index, 1)"
-        ></li>
-      </ul>
+    <div id="example">
+      <button v-on:click="counter += 1">Adiciona 1</button>
+      <p>Quantas vezes o botão acima foi clicado: {{ counter }}</p>
     </div>
 
     <script type="text/javascript">
 
-      Vue.component('todo-item', {
-        template: '\
-          <li>\
-            {{ title }}\
-            <button v-on:click="$emit(\'remove\')">X</button>\
-            </li>\
-          ',
-          props: ['title']
-      })
-      new Vue({
-         el: '#todo-list-example',
+    var example =  new Vue({
+         el: '#example',
          data: {
-           newTodoText: '',
-           todos: [
-             {
-               id: 1,
-               title: 'Lavar os pratos',
-             },
-             {
-               id: 2,
-               title: 'Tirar o lixo',
-             },
-             {
-               id: 3,
-               title: 'Cortar a grama'
-             }
-           ],
-           nextTodoId: 4
-         },
-         methods: {
-           addNewTodo: function () {
-             this.todos.push({
-               id: this.nextTodoId++,
-               title: this.newTodoText
-             })
-             this.newTodoText = ''
-           }
+           counter: 0
          }
-      });
+      })
 
     </script>
   </body>
