--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="example">
-      <button v-on:click="counter += 1">Adiciona 1</button>
-      <p>Quantas vezes o botão acima foi clicado: {{ counter }}</p>
+      <button v-on:click="greet">Cumprimentar</button>
     </div>
 
     <script type="text/javascript">
@@ -17,7 +16,17 @@
     var example =  new Vue({
          el: '#example',
          data: {
-           counter: 0
+           name: 'Vue.js'
+         },
+         // define métodos dentro do objeto `methods`
+         methods: {
+           greet: function (event) {
+             alert('Olá ' + this.name + '!')
+             //event é o evento DOM nativo
+             if (event) {
+               alert(event.target.tagName)
+             }
+           }
          }
       })
 
