--- a/index.html
+++ b/index.html
@@ -8,42 +8,18 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="example">
-      <!-- a propagação do evento click será interrompida -->
-      <a v-on:click.stop="doThis"></a>
+      <!-- só chama `vm.submit()` quando o `keyCode` é 13 -->
+      <input v-on:keyup.13="submit">
 
-      <!-- o evento submit deixará de recarregar a página -->
-      <form v-on:submit.prevent="onSubmit"></form>
+      <!-- igual o acima -->
+      <input v-on:keyup.enter="submit">
 
-      <!-- modificadores podem ser encadeados -->
-      <a v-on:click.stop.prevent="doThat"></a>
+      <!-- também funciona com abreviações -->
+      <input @keyup.enter="submit">
 
-      <!-- é possível utilizar apenas o modificador -->
-      <form v-on:submit.prevent></form>
-
-      <!-- usar modo de captura ao adicionar o evento -->
-      <!-- ou seja, um evento em um elemento interno é tratado aqui após ser tratado por aquele elemento -->
-      <div v-on:click.capture="doThis">...</div>
-
-      <!-- só aciona o manipulador se event.target é o próprio elemento -->
-      <!-- isto é, não aciona a partir de um elemento filho -->
-      <div v-on:click.self="doThat">...</div>
-
-      <!-- A ordem importa quando utilizar modificadores, pois o código é gerado na mesma ordem.
-        Desta forma, `@click.prevent.selfirá prevenir **todos os cliques**,
-        enquanto@click.self.prevent` irá prevenir apenas cliques no próprio elemento. -->
-
-      <!-- o evento click será disparado apenas uma vez -->
-      <a v-on:click.once="doThis"></a>
-
-      <!-- o comportamento padrão do evento scroll (rolar) acontecerá -->
-      <!-- imediatamente, ao invés de aguardar `onScroll` completar   -->
-      <!-- para descobrir se ele chama `event.preventDefault()`       -->
-      <div v-on:scroll.passive="onScroll">...</div>
-
-      <!-- O .passive é especialmente útil para otimizar desempenho em dispositivos móveis. -->
-      <!-- Não use .passive e .prevent juntos, pois .prevent será ignorado e seu navegador
-       provavelmente exibirá um aviso. Lembre-se, .passive comunica ao navegador que você
-       não quer previnir o comportamento padrão do evento. -->
+<!--  Se necessário, defina apelidos personalizados através do objeto global config.keyCodes: -->
+    <!-- habilita `v-on:keyup.f1` -->
+          Vue.config.keyCodes.f1 = 112
     </div>
 
     <script type="text/javascript">
