--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="example">
-      <!-- Alt + C -->
-      <input @keyup.alt.67="clear">
+      <!-- dispara mesmo se Alt ou Shift também estiverem pressionados -->
+      <button @click.ctrl="onClick">A</button>
 
-      <!-- Ctrl + Click -->
-      <div @click.ctrl="doSomething">Do something</div>
+      <!-- dispara quando somente Ctrl estiver pressionado -->
+      <button @click.ctrl.exact="onCtrlClick">A</button>
 
-      <!-- Teclas modificadoras são diferentes de teclas comuns, e quando utilizadas
-      com eventos keyup, precisam estar pressionadas quando o evento é emitido.
-      Em outras palavras, keyup.ctrl só vai disparar se você soltar alguma tecla enquanto
-      ainda estiver segurando ctrl. E não irá disparar se você soltar a tecla ctrl sozinha. -->
+      <!-- dispara somente se não houverem teclas de sistema pressionadas -->
+      <button @click.exact="onClick">A</button>
     </div>
 
     <script type="text/javascript">
