--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="example">
-      <input type="checkbox" id="checkbox" v-model="checked">
-      <label for="checkbox">{{ checked }}</label>
+      <input type="checkbox" id="jack" value="Jack" v-model="checkedNames">
+      <label for="jack">Jack</label>
+      <input type="checkbox" id="john" value="John" v-model="checkedNames">
+      <label for="john">John</label>
+      <input type="checkbox" id="mike" value="Mike" v-model="checkedNames">
+      <label for="mike">Mike</label>
+      <br>
+      <span>Nomes assinalados: {{ checkedNames }}</span>
     </div>
 
     <script type="text/javascript">
 
-    var example =  new Vue({
-         el: '#example',
-         data: {
-           checked: false
-         }
+      var example =  new Vue({
+           el: '#example',
+           data: {
+             checkedNames: []
+           }
 
-      })
+        })
 
     </script>
   </body>
