--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="example">
-      <select v-model="selected" multiple>
-        <option>A</option>
-        <option>B</option>
-        <option>C</option>
+      <select v-model="selected">
+        <option v-for="option in options" v-bind:value="option.value">
+          {{ option.text }}
+        </option>
       </select>
       <br>
       <span>Selecionado: {{ selected }}</span>
@@ -22,7 +22,12 @@
       var example =  new Vue({
            el: '#example',
            data: {
-             selected: []
+             selected: 'A',
+             options: [
+               { text: 'Um', value: 'A' },
+               { text: 'Dois', value: 'B' },
+               { text: 'Três', value: 'C' }
+             ]
            }
 
         })
