--- a/index.html
+++ b/index.html
@@ -8,24 +8,18 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
     <div id="example">
-      <!-- sincronizado depois do "change" ao invés de "input" -->
-      <input v-model.lazy="msg" >
-
-      <input v-model.number="age" type="number">
-
-      <input v-model.trim="msg">
+      <my-component></my-component>
     </div>
 
     <script type="text/javascript">
-
-      var example =  new Vue({
-           el: '#example',
-           data: {
-             msg: this.msg,
-             age: this.age
-           }
-
-        })
+      //registro
+      Vue.component('my-component', {
+        template: '<div>Um elemento personalizado!</div>'
+      })
+      // cria uma instância raiz
+      new Vue({
+         el: '#example'
+      })
 
     </script>
   </body>
